--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -45,21 +45,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Для указанной ранее карты требуется несвободный устаревший драйвер NVIDIA "
-"(пакет ${legacy_driver}) или свободный драйвер Nouveau (пакет "
+"(пакет ${legacy_driver}) или свободный драйвер ${free_name} (пакет "
 "${free_driver})."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Перед тем, как использовать драйвер Nouveau, вам нужно удалить настройку "
+"Перед тем, как использовать драйвер ${free_name}, вам нужно удалить настройку "
 "NVIDIA из xorg.conf (и xorg.conf.d/)."
 
 
