--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -42,21 +42,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Det ovenstående kort kræver enten den ikkefrie forældede NVIDIA-driver "
-"(pakke ${legacy_driver}) eller den frie Nouveaudriver (pakken "
+"(pakke ${legacy_driver}) eller den frie ${free_name}driver (pakken "
 "${free_driver})."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Før Nouveaudriveren kan bruges, skal du fjerne NVIDIA-konfigurationen fra "
+"Før ${free_name}driveren kan bruges, skal du fjerne NVIDIA-konfigurationen fra "
 "xorg.conf (og xorg.conf.d/)."
 
 
