--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -42,21 +42,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Die oben angegebene Karte benötigt entweder den nicht-freien Legacy-NVIDIA-"
-"Treiber (aus dem Paket ${legacy_driver}) oder den freien Nouveau-"
+"Treiber (aus dem Paket ${legacy_driver}) oder den freien ${free_name}-"
 "Treiber (aus dem Paket ${free_driver})."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Bevor der Nouveau-Treiber genutzt werden kann, müssen Sie die NVIDIA-"
+"Bevor der ${free_name}-Treiber genutzt werden kann, müssen Sie die NVIDIA-"
 "Konfiguration aus xorg.conf (und xorg.conf.d/) entfernen."
 
 
