--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -73,21 +73,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "La tarjeta arriba mencionada requiere o bien del controlador no libre y "
 "obsoleto NVIDIA (paquete «${legacy_driver}») o el controlador "
-"libre Nouveau (paquete «${free_driver}»)."
+"libre ${free_name} (paquete «${free_driver}»)."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Antes de poder utilizar el controlador Nouveau debe eliminar la "
+"Antes de poder utilizar el controlador ${free_name} debe eliminar la "
 "configuración de fglrx de «xorg.conf» (y de «xorg.conf.d/»)."
 
 
