--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -50,13 +50,13 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
 #| msgid ""
-#| "The above card requires the free Nouveau driver in the package ${free_driver}."
+#| "The above card requires the free ${free_name} driver in the package ${free_driver}."
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"A tarxeta de enriba precisa do controlador libre «Nouveau», incluído no "
+"A tarxeta de enriba precisa do controlador libre «${free_name}», incluído no "
 "paquete «${free_driver}»."
 
 #. Type: boolean
@@ -64,13 +64,13 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Before the Nouveau driver can be used you must remove fglrx configuration "
+#| "Before the ${free_name} driver can be used you must remove fglrx configuration "
 #| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the fglrx-"
 #| "driver package."
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Antes de que o controlador «Nouveau» poida usarse debe eliminar a "
+"Antes de que o controlador «${free_name}» poida usarse debe eliminar a "
 "configuración de «fglrx» do ficheiro «xorg.conf» (e «xorg.conf.d/») e purgar "
 "(non chega con eliminar) o paquete «nvidia-driver»."
