--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -43,21 +43,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Tale scheda richiede il vecchio driver non libero NVIDIA (pacchetto "
-"${legacy_driver}) oppure il driver libero Nouveau (pacchetto ${free_driver}"
+"${legacy_driver}) oppure il driver libero ${free_name} (pacchetto ${free_driver}"
 ")."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Prima di poter usare il driver Nouveau è necessario rimuovere la "
+"Prima di poter usare il driver ${free_name} è necessario rimuovere la "
 "configurazione di NVIDIA da xorg.conf (e xorg.conf.d/)."
 
 
