--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -45,21 +45,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Powyższa karta wymaga albo niewolnego, nierozwijanego sterownika NVIDIA "
-"(pakiet ${legacy_driver}), albo wolnego sterownika Nouveau "
+"(pakiet ${legacy_driver}), albo wolnego sterownika ${free_name} "
 "(znajdującego się w pakiecie ${free_driver})."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Przed użyciem sterownika Nouveau, konieczne jest usunięcie konfiguracji "
+"Przed użyciem sterownika ${free_name}, konieczne jest usunięcie konfiguracji "
 "NVIDIA z xorg.conf (i xorg.conf.d/)."
 
 
