--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -43,21 +43,21 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
 "The above card requires either the non-free legacy NVIDIA driver (package "
-"${legacy_driver}) or the free Nouveau driver (package ${free_driver}"
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "Ovanstående kort behöver antingen den ofria drivrutinen NVIDIA (paketet "
-"${legacy_driver}) eller den fria drivrutinen Nouveau (paketet ${free_driver}"
+"${legacy_driver}) eller den fria drivrutinen ${free_name} (paketet ${free_driver}"
 ")."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the Nouveau driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Innan drivrutinen Nouveau kan användas måste du ta bort NVIDIA-inställningen "
+"Innan drivrutinen ${free_name} kan användas måste du ta bort NVIDIA-inställningen "
 "från xorg.conf (och xorg.conf.d/)."
 
 
