--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -19,21 +19,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Installer NVIDIA-driver på trods af at grafikkort ikke er understøttet?"
+"Installer ${vendor}-driver på trods af at grafikkort ikke er understøttet?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "De følgende grafikchipsæt i dit system er ikke længere understøttet af "
-"NVIDIA-driveren (pakke ${driver}). Du kan beholde pakken installeret for "
+"${vendor}-driveren (pakke ${driver}). Du kan beholde pakken installeret for "
 "eksempel for et andet grafikkort - men grafikkort med det følgende chipsæt "
 "vil ikke kunne bruges."
 
@@ -41,11 +41,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Det ovenstående kort kræver enten den ikkefrie forældede NVIDIA-driver "
+"Det ovenstående kort kræver enten den ikkefrie forældede ${vendor}-driver "
 "(pakke ${legacy_driver}) eller den frie ${free_name}driver (pakken "
 "${free_driver})."
 
@@ -53,10 +53,10 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Før ${free_name}driveren kan bruges, skal du fjerne NVIDIA-konfigurationen fra "
+"Før ${free_name}driveren kan bruges, skal du fjerne ${vendor}-konfigurationen fra "
 "xorg.conf (og xorg.conf.d/)."
 
 
