--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -20,19 +20,19 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
-msgstr "NVIDIA-Treiber installieren trotz nicht unterstützter Grafikkarte?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
+msgstr "${vendor}-Treiber installieren trotz nicht unterstützter Grafikkarte?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"Ihr System hat eine Grafikkarte, die nicht mehr vom NVIDIA-Treiber (aus dem "
+"Ihr System hat eine Grafikkarte, die nicht mehr vom ${vendor}-Treiber (aus dem "
 "Paket ${driver}) bedient wird. Sie möchten das Paket vielleicht "
 "installiert lassen - um beispielsweise eine andere Karte zu betreiben, aber "
 "der folgende Chipsatz wird damit nicht nutzbar sein:"
@@ -41,11 +41,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Die oben angegebene Karte benötigt entweder den nicht-freien Legacy-NVIDIA-"
+"Die oben angegebene Karte benötigt entweder den nicht-freien Legacy-${vendor}-"
 "Treiber (aus dem Paket ${legacy_driver}) oder den freien ${free_name}-"
 "Treiber (aus dem Paket ${free_driver})."
 
@@ -53,10 +53,10 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Bevor der ${free_name}-Treiber genutzt werden kann, müssen Sie die NVIDIA-"
+"Bevor der ${free_name}-Treiber genutzt werden kann, müssen Sie die ${vendor}-"
 "Konfiguration aus xorg.conf (und xorg.conf.d/) entfernen."
 
 
