--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -22,22 +22,23 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Faut-il installer le pilote NVIDIA avec une carte graphique non gérée ?"
+"Faut-il installer le pilote ${vendor} avec une carte graphique non gérée ?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
+#| # in my bulk variable substitutions this did not match correctly here ...
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Les jeux de composants graphiques suivants trouvés sur cette machine ne sont "
-"plus gérés par le pilote NVIDIA (paquet ${driver}). Vous pouvez préférer garder NVIDIA (par "
+"plus gérés par le pilote ${vendor} (paquet ${driver}). Vous pouvez préférer garder ${vendor} (par "
 "exemple pour piloter une autre carte), mais dans ce cas, la carte graphique "
 "ci-dessus ne sera pas utilisable."
 
@@ -45,11 +46,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Cette carte a besoin soit du pilote NVIDIA constructeur, non libre, fourni "
+"Cette carte a besoin soit du pilote ${vendor} constructeur, non libre, fourni "
 "par le paquet ${legacy_driver} ou du pilote libre ${free_name} fourni "
 "par le paquet ${free_driver}."
 
@@ -57,11 +58,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Avant de pouvoir l'utiliser, il est nécessaire de supprimer la configuration "
-"de NVIDIA dans le fichier xorg.conf (ou dans un des fichiers de xorg.conf."
+"de ${vendor} dans le fichier xorg.conf (ou dans un des fichiers de xorg.conf."
 "d/)."
 
 
