--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -21,9 +21,9 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Quere instalar o controlador «NVIDIA» inda que non teña ningunha tarxeta "
+"Quere instalar o controlador «${vendor}» inda que non teña ningunha tarxeta "
 "gráfica admitida?"
 
 #. Type: boolean
@@ -35,7 +35,7 @@ msgstr ""
 #| "by the fglrx driver:You may wish to keep fglrx (for instance to drive "
 #| "some other card), but the above card won't be usable."
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
@@ -52,7 +52,7 @@ msgstr ""
 #| msgid ""
 #| "The above card requires the free ${free_name} driver in the package ${free_driver}."
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
@@ -65,12 +65,11 @@ msgstr ""
 #, fuzzy
 #| msgid ""
 #| "Before the ${free_name} driver can be used you must remove fglrx configuration "
-#| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the fglrx-"
-#| "driver package."
+#| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the ${driver}"
+#| " package."
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Antes de que o controlador «${free_name}» poida usarse debe eliminar a "
-"configuración de «fglrx» do ficheiro «xorg.conf» (e «xorg.conf.d/») e purgar "
-"(non chega con eliminar) o paquete «nvidia-driver»."
+"configuración de «fglrx» do ficheiro «xorg.conf» (e «xorg.conf.d/»)."
