--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -19,9 +19,9 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Nainštalovať ovládač NVIDIA napriek tou, že máte nepodporovanú grafickú "
+"Nainštalovať ovládač ${vendor} napriek tou, že máte nepodporovanú grafickú "
 "kartu?"
 
 #. Type: boolean
@@ -33,7 +33,7 @@ msgstr ""
 #| "by the fglrx driver:You may wish to keep fglrx (for instance to drive "
 #| "some other card), but the above card won't be usable."
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
@@ -50,7 +50,7 @@ msgstr ""
 #| msgid ""
 #| "The above card requires the free ${free_name} driver in the package ${free_driver}."
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
@@ -63,13 +63,12 @@ msgstr ""
 #, fuzzy
 #| msgid ""
 #| "Before the ${free_name} driver can be used you must remove fglrx configuration "
-#| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the fglrx-"
-#| "driver package."
+#| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the ${driver}"
+#| " package."
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Predtým, než budete môcť používať ovládač ${free_name} musíte odstrániť z xorg."
-"conf (a z xorg.conf.d/) konfiguráciu fglrx a vyčistiť („purge“, nie len "
-"„remove“) balík nvidia-driver."
+"conf (a z xorg.conf.d/) konfiguráciu ${vendor}"
 
