--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -49,22 +49,22 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"¿Desea instalar el controlador NVIDIA aún cuando su tarjeta gráfica no sea "
+"¿Desea instalar el controlador ${vendor} aún cuando su tarjeta gráfica no sea "
 "compatible?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Este sistema tiene una tarjeta gráfica que ya no puede administrar el "
-"controlador NVIDIA (paquete «${driver}»). Tal vez quiera mantener el "
+"controlador ${vendor} (paquete «${driver}»). Tal vez quiera mantener el "
 "paquete instalado (por ejemplo para controlar alguna otra tarjeta), pero no "
 "podrá utilizarse para gestionar la tarjeta mostrada a continuación:"
 
@@ -72,19 +72,19 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
 "La tarjeta arriba mencionada requiere o bien del controlador no libre y "
-"obsoleto NVIDIA (paquete «${legacy_driver}») o el controlador "
+"obsoleto ${vendor} (paquete «${legacy_driver}») o el controlador "
 "libre ${free_name} (paquete «${free_driver}»)."
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Antes de poder utilizar el controlador ${free_name} debe eliminar la "
