--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -20,20 +20,20 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Installare il driver NVIDIA nonostante una scheda grafica non supportata?"
+"Installare il driver ${vendor} nonostante una scheda grafica non supportata?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"Questo sistema ha una scheda grafica che non è più gestita dal driver NVIDIA "
+"Questo sistema ha una scheda grafica che non è più gestita dal driver ${vendor} "
 "(pacchetto ${driver}). Si può voler mantenere il pacchetto installato, "
 "ad esempio per pilotare una qualche altra scheda, ma quella con il seguente "
 "chipset non sarà utilizzabile:"
@@ -42,11 +42,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Tale scheda richiede il vecchio driver non libero NVIDIA (pacchetto "
+"Tale scheda richiede il vecchio driver non libero ${vendor} (pacchetto "
 "${legacy_driver}) oppure il driver libero ${free_name} (pacchetto ${free_driver}"
 ")."
 
@@ -54,11 +54,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Prima di poter usare il driver ${free_name} è necessario rimuovere la "
-"configurazione di NVIDIA da xorg.conf (e xorg.conf.d/)."
+"configurazione di ${vendor} da xorg.conf (e xorg.conf.d/)."
 
 
 
