--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -19,21 +19,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"サポートされていないグラフィックスカードですが NVIDIA ドライバをインストール"
+"サポートされていないグラフィックスカードですが ${vendor} ドライバをインストール"
 "しますか?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"このシステムには NVIDIA ドライバ (${driver} パッケージ) ではもう扱われな"
+"このシステムには ${vendor} ドライバ (${driver} パッケージ) ではもう扱われな"
 "い、グラフィックカードがあります。たとえばほかのカードを動作させるなどのため"
 "にパッケージをインストールしたままにしたいかもしれませんが、下記のチップセッ"
 "トを使ったカードは利用できなくなります:"
@@ -42,11 +42,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"上記のカードには、フリーではない旧式の NVIDIA ドライバ (${legacy_driver}"
+"上記のカードには、フリーではない旧式の ${vendor} ドライバ (${legacy_driver}"
 " パッケージ) またはフリーの ${free_name} ドライバ (${free_driver}"
 " パッケージ) のいずれかが必要です。"
 
@@ -54,10 +54,10 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"${free_name} ドライバを利用できるようにするには、NVIDIA の設定を xorg.conf (およ"
+"${free_name} ドライバを利用できるようにするには、${vendor} の設定を xorg.conf (およ"
 "び xorg.conf.d/) から削除しなければなりません。"
 
 
