--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -22,21 +22,21 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
-"Zainstalować sterownik NVIDIA ignorując nieobsługiwaną kartę graficzną?"
+"Zainstalować sterownik ${vendor} ignorując nieobsługiwaną kartę graficzną?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "W systemie znajduje się karta graficzna, która nie jest dłużej obsługiwana "
-"przez sterownik NVIDIA (z pakietu ${driver}). Można jednak zachować "
+"przez sterownik ${vendor} (z pakietu ${driver}). Można jednak zachować "
 "pakiet (np. do innej karty), lecz ta z następującym chipsetem nie będzie "
 "wówczas obsługiwana:"
 
@@ -44,11 +44,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Powyższa karta wymaga albo niewolnego, nierozwijanego sterownika NVIDIA "
+"Powyższa karta wymaga albo niewolnego, nierozwijanego sterownika ${vendor} "
 "(pakiet ${legacy_driver}), albo wolnego sterownika ${free_name} "
 "(znajdującego się w pakiecie ${free_driver})."
 
@@ -56,11 +56,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Przed użyciem sterownika ${free_name}, konieczne jest usunięcie konfiguracji "
-"NVIDIA z xorg.conf (i xorg.conf.d/)."
+"${vendor} z xorg.conf (i xorg.conf.d/)."
 
 
 
