--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -20,20 +20,20 @@ msgstr ""
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
-msgid "Install NVIDIA driver despite unsupported graphics card?"
-msgstr "Grafik kartı desteklenmediği halde NVIDIA sürücüsü kurulsun mu?"
+msgid "Install ${vendor} driver despite unsupported graphics card?"
+msgstr "Grafik kartı desteklenmediği halde ${vendor} sürücüsü kurulsun mu?"
 
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"This system has a graphics card which is no longer handled by the NVIDIA "
+"This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - "
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
 "Sisteminizde bulunan grafik kartı artık (${driver} paketinin sağladığı) "
-"NVIDIA sürücüsüyle yönetilmeyen bir kart. İstediğiniz takdirde paketi kurulu "
+"${vendor} sürücüsüyle yönetilmeyen bir kart. İstediğiniz takdirde paketi kurulu "
 "vaziyette tutmaya devam edebilirsiniz (örneğin başka bir kartı yönetmesi "
 "için), fakat aşağıdaki yonga kümesini kullanan kart bu sürücü ile "
 "kullanılamayacaktır:"
@@ -42,11 +42,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"The above card requires either the non-free legacy NVIDIA driver (package "
+"The above card requires either the non-free legacy ${vendor} driver (package "
 "${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
 ")."
 msgstr ""
-"Yukarıdaki kartı kullanabilmek için ya özgür olmayan eski NVIDIA sürücüsünü "
+"Yukarıdaki kartı kullanabilmek için ya özgür olmayan eski ${vendor} sürücüsünü "
 "(${legacy_driver} paketi) ya da özgür ${free_name} sürücüsünü (${free_driver}"
 " paketi) kullanmak gerekmektedir."
 
@@ -54,11 +54,11 @@ msgstr ""
 #. Description
 #: ../libgl1-nvidia-glx.templates:2001
 msgid ""
-"Before the ${free_name} driver can be used you must remove NVIDIA configuration "
+"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "${free_name} sürücüsünü kullanmadan önce xorg.conf (ve xorg.conf.d/) konumundaki "
-"NVIDIA yapılandırmasını kaldırmanız gerekmektedir."
+"${vendor} yapılandırmasını kaldırmanız gerekmektedir."
 
 
 
