kill the last fglrx references
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5069 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -88,7 +88,7 @@ msgid ""
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Antes de poder utilizar el controlador ${free_name} debe eliminar la "
-"configuración de fglrx de «xorg.conf» (y de «xorg.conf.d/»)."
+"configuración de ${vendor} de «xorg.conf» (y de «xorg.conf.d/»)."
 
 
 
