--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -32,7 +32,7 @@ msgstr ""
 #, fuzzy
 #| msgid ""
 #| "The following graphics chipset found in your system is no longer handled "
-#| "by the fglrx driver:You may wish to keep fglrx (for instance to drive "
+#| "by the ${vendor} driver:You may wish to keep ${vendor} (for instance to drive "
 #| "some other card), but the above card won't be usable."
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
@@ -41,7 +41,7 @@ msgid ""
 "chipset won't be usable:"
 msgstr ""
 "Os seguintes chipsets gráficos que se atoparon no seu sistema xa non son "
-"manexados polo controlador «fglrx»:Pode querer manter «fglrx» (por exemplo "
+"manexados polo controlador «${vendor}»:Pode querer manter «${vendor}» (por exemplo "
 "para manexar outra tarxeta), pero a tarxeta indicada enriba non poderá ser "
 "usada."
 
@@ -64,7 +64,7 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Before the ${free_name} driver can be used you must remove fglrx configuration "
+#| "Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 #| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the ${driver}"
 #| " package."
 msgid ""
@@ -72,4 +72,4 @@ msgid ""
 "from xorg.conf (and xorg.conf.d/)."
 msgstr ""
 "Antes de que o controlador «${free_name}» poida usarse debe eliminar a "
-"configuración de «fglrx» do ficheiro «xorg.conf» (e «xorg.conf.d/»)."
+"configuración de «${vendor}» do ficheiro «xorg.conf» (e «xorg.conf.d/»)."
