--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -30,7 +30,7 @@ msgstr ""
 #, fuzzy
 #| msgid ""
 #| "The following graphics chipset found in your system is no longer handled "
-#| "by the fglrx driver:You may wish to keep fglrx (for instance to drive "
+#| "by the ${vendor} driver:You may wish to keep ${vendor} (for instance to drive "
 #| "some other card), but the above card won't be usable."
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
@@ -38,8 +38,8 @@ msgid ""
 "for instance to drive some other card - but the card with the following "
 "chipset won't be usable:"
 msgstr ""
-"Ovládač fglrx už nedokáže pracovať s nasledovnou grafickou čipovou sadou, "
-"ktorá sa nachádza vo vašom systéme:Možno si budete chcieť ponechať fglrx "
+"Ovládač ${vendor} už nedokáže pracovať s nasledovnou grafickou čipovou sadou, "
+"ktorá sa nachádza vo vašom systéme:Možno si budete chcieť ponechať ${vendor} "
 "(napríklad aby ovládal nejakú inú kartu), ale hore uvedená karta nebude "
 "použiteľná."
 
@@ -62,7 +62,7 @@ msgstr ""
 #: ../libgl1-nvidia-glx.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Before the ${free_name} driver can be used you must remove fglrx configuration "
+#| "Before the ${free_name} driver can be used you must remove ${vendor} configuration "
 #| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the ${driver}"
 #| " package."
 msgid ""
